--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
             <div class="dropdown-menu">
                 <br>
                 <!-- each button tag has a v-on directive that leads to a different listener method -->
-                <button v-on:click='setAddSeating' class="dropdown-item btn btn-primary" type="button">Add Area</button>
+                <button v-on:click='setAddSeating' class="dropdown-item btn btn-warning" type="button">Add Area</button>
                 <add-form></add-form>
                 <button v-on:click='setEditTool' class="dropdown-item btn btn-warning" type="button">Edit Area</button>
                 <edit-form></edit-form>
                 <button v-on:click="setDeleteSeating" class="dropdown-item btn btn-warning" type="button">Delete Seating</button>
-                <button class="dropdown-item btn btn-warning" v-on:click = 'performDownload' type="button">Download</button>
+                <button class="dropdown-item btn btn-warning" v-on:click = 'setSaveSeating' type="button">Save</button>
+                <save-form></save-form>
                 <br>
             </div>
 
@@ -131,6 +132,8 @@
         </div>        
     </template>
 
+
+
     <template id = "edit-form">
         <!-- v-show directive makes div invisible if "showSeatingForm" is false -->
         <div v-show="showEditSeatingForm">
@@ -191,6 +194,17 @@
             <!-- v-on calls "submitSeatingData" when a click event is detected on this button  -->
             <button v-on:click ="submitEditSeating">Submit</button>
         </div>
+    </template>
+
+    <template id = "save-form">
+        <div v-show="showSaveSeatingForm">
+            <form>
+                Name: <input type="text" id="saveName" v-model ="name" placeholder="Seating Name" required><br>
+                <br>
+            </form>
+            <button v-on:click ="saveSeating">Submit</button>
+        <p v-show="false"><span>{{showSaveSeatingForm}}</span></p>
+        </div>        
     </template>
 
     <script src="main.js"></script>
